--- a/.github/workflows/Manually.yml
+++ b/.github/workflows/Manually.yml
@@ -1,4 +1,4 @@
-name: Pull Request
+name: Manually
 
 on:
   workflow_dispatch
@@ -10,8 +10,8 @@ jobs:
       matrix:
         os:
           - ubuntu-22.04
-          - macos-13
-          - windows-2022
+          #- macos-13
+          #- windows-2022
         abi:
           - armeabi-v7a
           - arm64-v8a
@@ -65,16 +65,16 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Build Debug APK
+      - name: Build Release APK
         run: |
-          ./gradlew :app:assembleDebug
-          ./gradlew :assembleDebugPlugins
+          ./gradlew :app:assembleRelease
+          ./gradlew :assembleReleasePlugins
 
       - name: Upload app
         uses: actions/upload-artifact@v3
         with:
           name: app-${{ matrix.os }}-${{ matrix.abi }}
-          path: app/build/outputs/apk/debug/
+          path: app/build/outputs/apk/release/
 
       - name: Pack plugins
         shell: bash
@@ -84,7 +84,7 @@ jobs:
           do
             if [ -d "plugin/${i}" ]
             then
-              mv "plugin/${i}/build/outputs/apk/debug" "plugins-to-upload/${i}"
+              mv "plugin/${i}/build/outputs/apk/release" "plugins-to-upload/${i}"
             fi
           done
 
