--- a/.github/workflows/Manually.yml
+++ b/.github/workflows/Manually.yml
@@ -1,4 +1,4 @@
-name: Pull Request
+name: Manually
 
 on:
   workflow_dispatch
@@ -10,13 +10,13 @@ jobs:
       matrix:
         os:
           - ubuntu-22.04
-          - macos-13
-          - windows-2022
+          #- macos-13
+          #- windows-2022
         abi:
-          - armeabi-v7a
+          #- armeabi-v7a
           - arm64-v8a
-          - x86
-          - x86_64
+          #- x86
+          #- x86_64
     env:
       BUILD_ABI: ${{ matrix.abi }}
     steps:
@@ -65,16 +65,16 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Build Debug APK
+      - name: Build release APK
         run: |
-          ./gradlew :app:assembleDebug
-          ./gradlew :assembleDebugPlugins
+          ./gradlew :app:assembleRelease
+          ./gradlew :assembleReleasePlugins
 
       - name: Upload app
         uses: actions/upload-artifact@v3
         with:
           name: app-${{ matrix.os }}-${{ matrix.abi }}
-          path: app/build/outputs/apk/debug/
+          path: app/build/outputs/apk/release/
 
       - name: Pack plugins
         shell: bash
@@ -84,10 +84,24 @@ jobs:
           do
             if [ -d "plugin/${i}" ]
             then
-              mv "plugin/${i}/build/outputs/apk/debug" "plugins-to-upload/${i}"
+              mv "plugin/${i}/build/outputs/apk/release" "plugins-to-upload/${i}"
             fi
           done
-
+          
+      - name: Sign app and plugins
+        uses: kevin-david/zipalign-sign-android-release@v1.1.1
+        #uses: rpavlik/sign-android-release@master
+        id: sign_apk
+        with:
+          releaseDirectory: app/build/outputs/apk/release/
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          alias: ${{ secrets.KEY_ALIAS }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+          zipAlign: true
+        env:
+          BUILD_TOOLS_VERSION: "33.0.2"
+          
       - name: Upload plugins
         uses: actions/upload-artifact@v3
         with:
