--- a/.github/workflows/Manually.yml
+++ b/.github/workflows/Manually.yml
@@ -33,13 +33,13 @@ jobs:
           git checkout -- *
 
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           java-version: "17"
 
       - name: Setup Android environment
-        uses: android-actions/setup-android@v2
+        uses: android-actions/setup-android@v3
 
       - name: Install Android NDK
         run: |
@@ -63,35 +63,17 @@ jobs:
           Add-Content $env:GITHUB_PATH "C:/msys64/ucrt64/bin"
 
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v3
 
       - name: Build release APK
         run: |
           ./gradlew :app:assembleRelease
           ./gradlew :assembleReleasePlugins
 
-      - name: Upload app
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-${{ matrix.os }}-${{ matrix.abi }}
-          path: app/build/outputs/apk/release/
-
-      - name: Pack plugins
-        shell: bash
-        run: |
-          mkdir plugins-to-upload
-          for i in $(ls plugin)
-          do
-            if [ -d "plugin/${i}" ]
-            then
-              mv "plugin/${i}/build/outputs/apk/release" "plugins-to-upload/${i}"
-            fi
-          done
-          
-      - name: Sign app and plugins
+      - name: Sign app
         uses: kevin-david/zipalign-sign-android-release@v1.1.1
         #uses: rpavlik/sign-android-release@master
-        id: sign_apk
+        id: sign_app
         with:
           releaseDirectory: app/build/outputs/apk/release/
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
@@ -102,8 +84,43 @@ jobs:
         env:
           BUILD_TOOLS_VERSION: "33.0.2"
           
+
+      - name: Upload app
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-${{ matrix.os }}-${{ matrix.abi }}
+          path: app/build/outputs/apk/release/
+
+      - name: Pack plugins
+        shell: bash
+        run: |
+          mkdir plugins-to-upload
+          find plugin/*/build/outputs/apk/release -type f -print0 | while IFS= read -r -d '' source_file; do
+            # 获取第二级目录名作为前缀 
+            prefix=$(basename "$(dirname "$(dirname "$(dirname "$(dirname "$(dirname "$source_file")")")")")")
+            # 获取文件名 
+            filename=$(basename "$source_file") 
+            # 构建目标文件路径，加上前缀
+            target_file="plugins-to-upload/$prefix"_"$filename"
+            mv "$source_file" "$target_file"
+          done
+
+      - name: Sign plugins
+        uses: kevin-david/zipalign-sign-android-release@v1.1.1
+        #uses: rpavlik/sign-android-release@master
+        id: sign_plugins
+        with:
+          releaseDirectory: plugins-to-upload
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          alias: ${{ secrets.KEY_ALIAS }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+          zipAlign: true
+        env:
+          BUILD_TOOLS_VERSION: "33.0.2" 
+          
       - name: Upload plugins
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: plugins-${{ matrix.os }}-${{ matrix.abi }}
           path: plugins-to-upload
