--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "lib/fcitx5/src/main/cpp/fcitx5"]
 	path = lib/fcitx5/src/main/cpp/fcitx5
-	url = git@github.com:fcitx/fcitx5.git
+	url = https://github.com/fcitx/fcitx5
 [submodule "lib/fcitx5/src/main/cpp/prebuilt"]
 	path = lib/fcitx5/src/main/cpp/prebuilt
 	url = https://github.com/wxyzh/prebuilt
@@ -24,7 +24,7 @@
 	url = git@github.com:fcitx/fcitx5-unikey.git
 [submodule "plugin/rime/src/main/cpp/fcitx5-rime"]
 	path = plugin/rime/src/main/cpp/fcitx5-rime
-	url = git@github.com:fcitx/fcitx5-rime.git
+	url = https://github.com/fcitx/fcitx5-rime
 [submodule "plugin/rime/src/main/cpp/rime-prelude"]
 	path = plugin/rime/src/main/cpp/rime-prelude
 	url = git@github.com:rime/rime-prelude.git
