Add ClearURLs/Rules as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "plugin/jyutping/src/main/cpp/libime-jyutping"]
 	path = plugin/jyutping/src/main/cpp/libime-jyutping
 	url = https://github.com/fcitx/libime-jyutping
+[submodule "plugin/clipboard-filter/ClearURLsRules"]
+	path = plugin/clipboard-filter/ClearURLsRules
+	url = https://github.com/ClearURLs/Rules
