--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -9,7 +9,10 @@ jobs:
   develop:
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest]
+        #  Nix doesn't support Android toolchain on aarch64-darwin yet
+        # https://github.com/NixOS/nixpkgs/issues/303968
+#        os: [ubuntu-latest, macOS-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Fetch source code
