CI: update fdroidserver image to bookworm (#482)
Co-authored-by: linsui <linsui555@gmail.com>

--- a/.github/workflows/fdroid.yml
+++ b/.github/workflows/fdroid.yml
@@ -21,7 +21,7 @@ defaults:
 jobs:
   fdroid-build:
     runs-on: ubuntu-latest
-    container: registry.gitlab.com/fdroid/fdroidserver:buildserver-bullseye
+    container: registry.gitlab.com/fdroid/fdroidserver:buildserver-bookworm
     strategy:
       matrix:
         abi:
