Update fcitx5 submodules
# Conflicts:
#	lib/fcitx5-lua/src/main/cpp/fcitx5-lua
#	plugin/anthy/src/main/cpp/anthy-cmake
#	plugin/anthy/src/main/cpp/fcitx5-anthy
#	plugin/hangul/src/main/cpp/fcitx5-hangul
#	plugin/jyutping/src/main/cpp/libime-jyutping
#	plugin/rime/src/main/cpp/fcitx5-rime
#	plugin/sayura/src/main/cpp/fcitx5-sayura
#	plugin/unikey/src/main/cpp/fcitx5-unikey

--- a/plugin/hangul/src/main/cpp/CMakeLists.txt
+++ b/plugin/hangul/src/main/cpp/CMakeLists.txt
@@ -23,4 +23,5 @@ set_target_properties(Hangul_static PROPERTIES
         )
 
 set(HANGUL_TARGET Hangul_static)
+option(ENABLE_TEST "" OFF)
 add_subdirectory(fcitx5-hangul)
