Update gradle publish action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,15 +11,17 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-22.04
-    env:
-      GITHUB_TOKEN: ${{ secrets.PACKAGE_TOKEN }}
-      GITHUB_ACTOR: android-fcitx5
     steps:
       - name: Fetch source code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           submodules: recursive
+
+      - name: Install system dependencies
+        run: |
+          sudo apt update
+          sudo apt install extra-cmake-modules gettext
 
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -29,22 +31,17 @@ jobs:
 
       - name: Setup Android environment
         uses: android-actions/setup-android@v3
-
-      - name: Install Android NDK
-        run: |
-          sdkmanager --install "cmake;3.22.1"
-
-      - name: Install system dependencies
-        run: |
-          sudo apt update
-          sudo apt install extra-cmake-modules gettext
+        with:
+          packages: cmake;3.22.1
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
       - name: Publish build convention and libs
+        env:
+          GITHUB_TOKEN: ${{ secrets.PACKAGE_TOKEN }}
+          GITHUB_ACTOR: fcitx5-android-bot
         run: |
           ./gradlew :build-logic:convention:publish
           ./gradlew :lib:common:publish
           ./gradlew :lib:plugin-base:publish
-
