Refactor build process (#554)
- Use AGP splits.abi
- Make prefab tasks run after native build tasks
- Locate cmake in AGP way
- Sign apk with gradle

--- a/.github/workflows/fdroid.yml
+++ b/.github/workflows/fdroid.yml
@@ -20,7 +20,7 @@ defaults:
 
 jobs:
   fdroid-build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     container: registry.gitlab.com/fdroid/fdroidserver:buildserver-bookworm
     strategy:
       matrix:
