--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           name: fcitx5-android
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-      - name: Build Debug APK
+      - name: Build Release APK
         run: |
-          nix develop .#noAS --command ./gradlew :app:assembleDebug
-          nix develop .#noAS --command ./gradlew :assembleDebugPlugins
+          nix develop .#noAS --command ./gradlew :app:assembleRelease
+          nix develop .#noAS --command ./gradlew :assembleReleasePlugins
