Update fcitx5 submodules and prebuilt
- support addon factory v2 in AndroidSharedLibraryLoader
see https://github.com/fcitx/fcitx5/pull/1185
- set VERSION_NAME and PREBUILT_DIR in NativeBaseConventionPlugin

# Conflicts:
#	app/licenses/libraries/opencc.json
#	lib/fcitx5-chinese-addons/src/main/cpp/fcitx5-chinese-addons
#	lib/fcitx5/src/main/cpp/fcitx5
#	lib/fcitx5/src/main/cpp/prebuilt
#	plugin/chewing/licenses/libraries/fcitx5-chewing.json
#	plugin/chewing/licenses/libraries/libchewing.json
#	plugin/hangul/licenses/libraries/fcitx5-hangul.json
#	plugin/hangul/src/main/cpp/fcitx5-hangul
#	plugin/jyutping/licenses/libraries/libime-jyutping.json
#	plugin/rime/licenses/libraries/fcitx5-rime.json
#	plugin/rime/licenses/libraries/librime-lua.json
#	plugin/rime/licenses/libraries/librime-octagram.json
#	plugin/rime/licenses/libraries/librime.json
#	plugin/rime/licenses/libraries/opencc.json
#	plugin/rime/licenses/libraries/rime-luna-pinyin.json
#	plugin/rime/src/main/cpp/fcitx5-rime
#	plugin/thai/licenses/libraries/fcitx5-libthai.json

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
-project(fcitx5-android VERSION 0.0.9)
+project(fcitx5-android VERSION ${VERSION_NAME})
 
 # For reproducible build
 add_link_options("LINKER:--hash-style=gnu,--build-id=none")
@@ -31,9 +31,6 @@ add_subdirectory(androidfrontend)
 add_subdirectory(androidkeyboard)
 add_subdirectory(androidnotification)
 
-# prebuilt dir. at least it works.
-set(PREBUILT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../../lib/fcitx5/src/main/cpp/prebuilt")
-
 # prebuilt fmt
 set(fmt_DIR "${PREBUILT_DIR}/fmt/${ANDROID_ABI}/lib/cmake/fmt")
 find_package(fmt)
@@ -44,7 +41,7 @@ find_package(libuv)
 
 # prebuilt boost
 list(APPEND CMAKE_FIND_ROOT_PATH "${PREBUILT_DIR}/boost/${ANDROID_ABI}/lib/cmake")
-find_package(Boost 1.83.0 REQUIRED COMPONENTS headers filesystem iostreams CONFIG)
+find_package(Boost 1.86.0 REQUIRED COMPONENTS headers iostreams CONFIG)
 
 set(CHINESE_ADDONS_PINYIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../../lib/fcitx5-chinese-addons/src/main/cpp/fcitx5-chinese-addons/im/pinyin")
 add_library(pinyin-customphrase STATIC "${CHINESE_ADDONS_PINYIN_DIR}/customphrase.cpp")
