--- a/plugin/chewing/src/main/cpp/CMakeLists.txt
+++ b/plugin/chewing/src/main/cpp/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
-project(fcitx5-android-plugin-chewing VERSION 0.0.9)
+project(fcitx5-android-plugin-chewing VERSION ${VERSION_NAME})
 
 # For reproducible build
 add_link_options("LINKER:--hash-style=gnu,--build-id=none")
@@ -13,8 +13,6 @@ set(CMAKE_MODULE_PATH ${FCITX5_CMAKE_MODULES} ${CMAKE_MODULE_PATH})
 find_package(ECM MODULE)
 find_package(Fcitx5Core MODULE)
 find_package(Fcitx5Module MODULE)
-
-set(PREBUILT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../lib/fcitx5/src/main/cpp/prebuilt")
 
 add_library(Chewing_static STATIC IMPORTED)
 set_target_properties(Chewing_static PROPERTIES
