--- a/plugin/jyutping/src/main/cpp/CMakeLists.txt
+++ b/plugin/jyutping/src/main/cpp/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
-project(fcitx5-android-plugin-jyutping VERSION 0.0.9)
+project(fcitx5-android-plugin-jyutping VERSION ${VERSION_NAME})
 
 # For reproducible build
 add_link_options("LINKER:--hash-style=gnu,--build-id=none")
@@ -26,16 +26,13 @@ set(CMAKE_MODULE_PATH ${FCITX5_CHINESE_ADDONS_CMAKE_MODULES} ${CMAKE_MODULE_PATH
 
 find_package(Fcitx5ModulePunctuation MODULE)
 
-# prebuilt dir. at least it works.
-set(PREBUILT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../lib/fcitx5/src/main/cpp/prebuilt")
-
 # prebuilt fmt
 set(fmt_DIR "${PREBUILT_DIR}/fmt/${ANDROID_ABI}/lib/cmake/fmt")
 find_package(fmt)
 
 # prebuilt boost
 list(APPEND CMAKE_FIND_ROOT_PATH "${PREBUILT_DIR}/boost/${ANDROID_ABI}/lib/cmake")
-find_package(Boost 1.83.0 REQUIRED COMPONENTS iostreams CONFIG)
+find_package(Boost 1.86.0 REQUIRED COMPONENTS iostreams CONFIG)
 
 # prebuilt zstd
 set(zstd_DIR "${PREBUILT_DIR}/zstd/${ANDROID_ABI}/lib/cmake/zstd")
