change sub modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/fcitx/fcitx5.git
 [submodule "lib/fcitx5/src/main/cpp/prebuilt"]
 	path = lib/fcitx5/src/main/cpp/prebuilt
-	url = https://github.com/fcitx5-android/prebuilt.git
+	url = https://github.com/wxyzh/f5a-prebuilt
 [submodule "lib/fcitx5-lua/src/main/cpp/fcitx5-lua"]
 	path = lib/fcitx5-lua/src/main/cpp/fcitx5-lua
 	url = https://github.com/fcitx/fcitx5-lua.git
@@ -24,7 +24,7 @@
 	url = https://github.com/fcitx/fcitx5-unikey.git
 [submodule "plugin/rime/src/main/cpp/fcitx5-rime"]
 	path = plugin/rime/src/main/cpp/fcitx5-rime
-	url = https://github.com/fcitx/fcitx5-rime.git
+	url = https://github.com/wxyzh/fcitx5-rime
 [submodule "plugin/rime/src/main/cpp/rime-prelude"]
 	path = plugin/rime/src/main/cpp/rime-prelude
 	url = https://github.com/rime/rime-prelude.git
